@@ -1,4 +1,9 @@
 2014-05-29  Manuel Guesdon <mguesdon@orange-concept.com>
+	* GSWDatabase/WODisplayGroup.m
+	  add NSArray -objectsAtIndexesArray:
+	  add NSArray -isEqualByObjectPointer:
+	  fix -setSelectionIndexes:
+2014-05-29  Manuel Guesdon <mguesdon@orange-concept.com>
 	* GSWeb/GSWConstants.[hm]
 	  add GSWClassName_Component
 	* GSWeb/GSWComponentDefinition.m
